fix: trails layout on mobile

--- a/frontend/src/components/Trail/styles.scss
+++ b/frontend/src/components/Trail/styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 210px;
+  width: 100%;
 
   img {
     border-top-left-radius: 10px;
